--- a/Process/CSV/Merge_Csv.xaml
+++ b/Process/CSV/Merge_Csv.xaml
@@ -1,7 +1,6 @@
 <Activity mc:Ignorable="sap sap2010" x:Class="Merge_Csv" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data.Common" xmlns:si="clr-namespace:System.IO;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
-    <x:Property Name="in_Account_Name" Type="InArgument(x:String)" />
-    <x:Property Name="out_FilePath" Type="OutArgument(x:String)" />
+    <x:Property Name="in_FilePath" Type="InArgument(x:String)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
@@ -112,22 +111,22 @@
       <AssemblyReference>System.Linq.Async</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Merge_Csv" sap:VirtualizedContainerService.HintSize="1803,1243" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Merge_Csv" sap:VirtualizedContainerService.HintSize="1803,1423" sap2010:WorkflowViewState.IdRef="Sequence_1">
+    <Sequence.Variables>
+      <Variable x:TypeArguments="x:String" Name="str_CSVOutput" />
+      <Variable x:TypeArguments="sd:DataTable" Name="DtMerged">
+        <Variable.Default>
+          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="new DataTable()" />
+        </Variable.Default>
+      </Variable>
+    </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="484,173" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Start Of Merging Csv&quot;]" />
-    <Assign sap:VirtualizedContainerService.HintSize="484,114" sap2010:WorkflowViewState.IdRef="Assign_1">
-      <Assign.To>
-        <OutArgument x:TypeArguments="x:String">[out_FilePath]</OutArgument>
-      </Assign.To>
-      <Assign.Value>
-        <InArgument x:TypeArguments="x:String">["C:\temp\TransactionHistory\"+in_Account_Name+"_"+Now.ToString(“MMMM”)+".xlsx"]</InArgument>
-      </Assign.Value>
-    </Assign>
-    <ui:ForEachFileX DisplayName="For Each File in Folder" Folder="Data\TempTransactions" sap:VirtualizedContainerService.HintSize="484,769" sap2010:WorkflowViewState.IdRef="ForEachFileX_2" IncludeSubDirectories="False" OrderBy="NameAscFirst" SkipFolderWithoutPermission="False">
+    <ui:ForEachFileX DisplayName="For Each File in Folder" Folder="Data\TempTransactions" sap:VirtualizedContainerService.HintSize="484,786" sap2010:WorkflowViewState.IdRef="ForEachFileX_2" IncludeSubDirectories="False" OrderBy="NameAscFirst" SkipFolderWithoutPermission="False">
       <ui:ForEachFileX.Body>
         <ActivityAction x:TypeArguments="si:FileInfo, x:Int32">
           <ActivityAction.Argument1>
@@ -136,25 +135,17 @@
           <ActivityAction.Argument2>
             <DelegateInArgument x:TypeArguments="x:Int32" Name="CurrentIndex" />
           </ActivityAction.Argument2>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="450,479" sap2010:WorkflowViewState.IdRef="Sequence_3">
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="450,496" sap2010:WorkflowViewState.IdRef="Sequence_3">
             <Sequence.Variables>
-              <Variable x:TypeArguments="si:FileInfo" Name="FileName" />
-              <Variable x:TypeArguments="sd:DataTable" Name="DtMerged" />
+              <Variable x:TypeArguments="sd:DataTable" Name="DTInput" />
             </Sequence.Variables>
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:ReadCsvFile PathResource="{x:Null}" DataTable="[DTMerged]" Delimitator="Comma" DelimitatorForViewModel="Comma" DisplayName="Read CSV" FilePath="[CurrentFile.tostring]" sap:VirtualizedContainerService.HintSize="416,168" sap2010:WorkflowViewState.IdRef="ReadCsvFile_2" />
-            <ui:AppendRange WorkbookPathResource="{x:Null}" DataTable="[DtMerged]" DisplayName="Append Range Workbook" sap:VirtualizedContainerService.HintSize="416,148" sap2010:WorkflowViewState.IdRef="AppendRange_1" SheetName="Sheet1" WorkbookPath="[out_FilePath]">
-              <sap:WorkflowViewStateService.ViewState>
-                <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                  <x:Boolean x:Key="IsPinned">False</x:Boolean>
-                </scg:Dictionary>
-              </sap:WorkflowViewStateService.ViewState>
-            </ui:AppendRange>
+            <ui:ReadCsvFile PathResource="{x:Null}" DataTable="[DTInput]" Delimitator="Comma" DelimitatorForViewModel="Comma" DisplayName="Read CSV" FilePath="[CurrentFile.tostring]" sap:VirtualizedContainerService.HintSize="416,168" sap2010:WorkflowViewState.IdRef="ReadCsvFile_2" />
+            <ui:MergeDataTable Destination="[DtMerged]" DisplayName="Merge Data Table" sap:VirtualizedContainerService.HintSize="416,165" sap2010:WorkflowViewState.IdRef="MergeDataTable_1" MissingSchemaAction="Add" Source="[DTInput]" />
             <ui:DeleteFileX DisplayName="Delete File" sap:VirtualizedContainerService.HintSize="416,103" sap2010:WorkflowViewState.IdRef="DeleteFileX_1" Path="[CurrentFile.FullName]">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -167,6 +158,8 @@
         </ActivityAction>
       </ui:ForEachFileX.Body>
     </ui:ForEachFileX>
+    <ui:OutputDataTable DataTable="[DtMerged]" DisplayName="Output Data Table as Text" sap:VirtualizedContainerService.HintSize="484,112" sap2010:WorkflowViewState.IdRef="OutputDataTable_1" Text="[str_CSVOutput]" />
+    <ui:WriteTextFile File="{x:Null}" DisplayName="Write Text File" FileName="[in_FilePath]" sap:VirtualizedContainerService.HintSize="484,165" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[str_CSVOutput]" />
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="484,164" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;CSV's Merged&quot;]" />
   </Sequence>
 </Activity>
