--- a/Process/CSV/Merge_Csv.xaml
+++ b/Process/CSV/Merge_Csv.xaml
@@ -45,6 +45,7 @@
       <x:String>UiPath.Excel.Activities</x:String>
       <x:String>UiPath.Excel.Activities.Business</x:String>
       <x:String>UiPath.Shared.Activities</x:String>
+      <x:String>UiPath.Platform</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -109,16 +110,13 @@
       <AssemblyReference>Microsoft.VisualBasic.Core</AssemblyReference>
       <AssemblyReference>System.Memory.Data</AssemblyReference>
       <AssemblyReference>System.Linq.Async</AssemblyReference>
+      <AssemblyReference>UiPath.CodedWorkflows</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Merge_Csv" sap:VirtualizedContainerService.HintSize="1803,1423" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Merge_Csv" sap:VirtualizedContainerService.HintSize="1821,1423" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="str_CSVOutput" />
-      <Variable x:TypeArguments="sd:DataTable" Name="DtMerged">
-        <Variable.Default>
-          <VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="new DataTable()" />
-        </Variable.Default>
-      </Variable>
+      <Variable x:TypeArguments="sd:DataTable" Default="[new DataTable()]" Name="DtMerged" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -126,7 +124,7 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="484,173" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Start Of Merging Csv&quot;]" />
-    <ui:ForEachFileX DisplayName="For Each File in Folder" Folder="Data\TempTransactions" sap:VirtualizedContainerService.HintSize="484,786" sap2010:WorkflowViewState.IdRef="ForEachFileX_2" IncludeSubDirectories="False" OrderBy="NameAscFirst" SkipFolderWithoutPermission="False">
+    <ui:ForEachFileX DisplayName="For Each File in Folder" Filter="{x:Null}" Folder="Data\TempTransactions" sap:VirtualizedContainerService.HintSize="484,786" sap2010:WorkflowViewState.IdRef="ForEachFileX_2" IncludeSubDirectories="False" OrderBy="NameAscFirst" SkipFolderWithoutPermission="False">
       <ui:ForEachFileX.Body>
         <ActivityAction x:TypeArguments="si:FileInfo, x:Int32">
           <ActivityAction.Argument1>
@@ -144,7 +142,7 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:ReadCsvFile PathResource="{x:Null}" DataTable="[DTInput]" Delimitator="Comma" DelimitatorForViewModel="Comma" DisplayName="Read CSV" FilePath="[CurrentFile.tostring]" sap:VirtualizedContainerService.HintSize="416,168" sap2010:WorkflowViewState.IdRef="ReadCsvFile_2" />
+            <ui:ReadCsvFile FilePath="{x:Null}" DataTable="[DTInput]" Delimitator="Comma" DelimitatorForViewModel="Comma" DisplayName="Read CSV" Encoding="{x:Null}" sap:VirtualizedContainerService.HintSize="416,168" sap2010:WorkflowViewState.IdRef="ReadCsvFile_2" IgnoreQuotes="{x:Null}" PathResource="[LocalResource.FromPath(CurrentFile.FullName)]" />
             <ui:MergeDataTable Destination="[DtMerged]" DisplayName="Merge Data Table" sap:VirtualizedContainerService.HintSize="416,165" sap2010:WorkflowViewState.IdRef="MergeDataTable_1" MissingSchemaAction="Add" Source="[DTInput]" />
             <ui:DeleteFileX DisplayName="Delete File" sap:VirtualizedContainerService.HintSize="416,103" sap2010:WorkflowViewState.IdRef="DeleteFileX_1" Path="[CurrentFile.FullName]">
               <sap:WorkflowViewStateService.ViewState>
@@ -159,7 +157,7 @@
       </ui:ForEachFileX.Body>
     </ui:ForEachFileX>
     <ui:OutputDataTable DataTable="[DtMerged]" DisplayName="Output Data Table as Text" sap:VirtualizedContainerService.HintSize="484,112" sap2010:WorkflowViewState.IdRef="OutputDataTable_1" Text="[str_CSVOutput]" />
-    <ui:WriteTextFile File="{x:Null}" DisplayName="Write Text File" FileName="[in_FilePath]" sap:VirtualizedContainerService.HintSize="484,165" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[str_CSVOutput]" />
+    <ui:WriteTextFile ContinueOnError="{x:Null}" DisplayName="Write Text File" Encoding="{x:Null}" File="{x:Null}" FileName="[in_FilePath]" sap:VirtualizedContainerService.HintSize="484,165" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[str_CSVOutput]" />
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="484,164" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;CSV's Merged&quot;]" />
   </Sequence>
 </Activity>
